fix a couple bugs based on mobile testing

--- a/widgets-poc/sample-dashboards/nh-widget-dashboard-angular5/src/app/widgets/widget/widget.component.css
+++ b/widgets-poc/sample-dashboards/nh-widget-dashboard-angular5/src/app/widgets/widget/widget.component.css
@@ -37,21 +37,18 @@
   z-index: 100;
   max-width: 100%;
   position: absolute;
-  top: 15px;
-  right: 0;
-  bottom: 15px;
-  left: 0;
 }
 
 .loader {
   color: gray;
+  margin: auto;
   font-size: 45px;
+  top: calc(50% - 45px);
   text-indent: -9999em;
   overflow: hidden;
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  margin: 72px auto;
   position: relative;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
